qdrant/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qdrant
  labels:
    app.kubernetes.io/name: qdrant
    argocd.argoproj.io/managed-by: openshift-gitops
