qdrant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: qdrant-tls
spec:
  type: ClusterIP
  selector:
    app: qdrant
  ports:
    - port: 9443
      targetPort: 9443
      name: proxy
    - port: 6333
      targetPort: 6333
      name: http
    - port: 6334
      targetPort: 6334
      name: grpc
