qdrant/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qdrant
spec:
  to:
    kind: Service
    name: qdrant
  port:
    targetPort: proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
